about us page started

--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/Components/Cart/Default.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/Components/Cart/Default.cshtml
@@ -1,6 +1,6 @@
 ﻿<!-- Cart -->
 <div class="dropdown">
-	<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
+	<a  class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
 
 		<i class="fa fa-shopping-cart"></i>
 		<span>Sepetim</span>
@@ -32,11 +32,11 @@
 		</div>
 		<div class="cart-summary">
 			<small>3 Item(s) selected</small>
-			<h5>SUBTOTAL: $2940.00</h5>
+			<h5>Toplam: 2940.00 TL</h5>
 		</div>
 		<div class="cart-btns">
-			<a href="#">View Cart</a>
-			<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
+			<a asp-area="" asp-controller="Basket" asp-action="Index">Sepeti Görüntüle</a>
+			<a asp-area="" asp-controller="CheckOut" asp-action="Index">Ödemeye Geç  <i class="fa fa-arrow-circle-right"></i></a>
 		</div>
 	</div>
 </div>
