--- a/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using RhythmicRealm.UI
 @using RhythmicRealm.Shared.ViewModels.Identity
+@using RhythmicRealm.Shared.ViewModels.ProductViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, RhythmicRealm.UI
