--- a/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/ProductDetails/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@await Html.PartialAsync("_NavbarPartial")
+﻿@model ProductViewModel
+
+@await Html.PartialAsync("_NavbarPartial")
+
 
 <!-- SECTION -->
 <div class="section">
@@ -10,19 +13,19 @@
 			<div class="col-md-5 col-md-push-2">
 				<div id="product-main-img">
 					<div class="product-preview">
-						<img src="~/ui/img/product01.png" alt="">
+						<img src="~/images/products/@Model.ImageUrl" alt="">
 					</div>
 
 					<div class="product-preview">
-						<img src="~/ui/img/product03.png" alt="">
+						<img src="~/images/products/@Model.ImageUrl" alt="">
 					</div>
 
 					<div class="product-preview">
-						<img src="~/ui/img/product06.png" alt="">
+						<img src="~/images/products/@Model.ImageUrl" alt="">
 					</div>
 
 					<div class="product-preview">
-						<img src="~/ui/img/product08.png" alt="">
+						<img src="~/images/products/@Model.ImageUrl" alt="">
 					</div>
 				</div>
 			</div>
@@ -51,7 +54,7 @@
 			<!-- Product details -->
 			<div class="col-md-5">
 				<div class="product-details">
-					<h2 class="product-name">product name goes here</h2>
+					<h2 class="product-name">@Model.Name</h2>
 					<div>
 						<div class="product-rating">
 							<i class="fa fa-star"></i>
@@ -60,59 +63,37 @@
 							<i class="fa fa-star"></i>
 							<i class="fa fa-star-o"></i>
 						</div>
-						<a class="review-link" href="#">10 Review(s) | Add your review</a>
+						
 					</div>
 					<div>
-						<h3 class="product-price">$980.00 <del class="product-old-price">$990.00</del></h3>
-						<span class="product-available">In Stock</span>
+						<h3 class="product-price">@($"{Model.Price:C2}") <del class="product-old-price">@($"{Model.Price+2500:C2}")</del></h3>
+						<span class="product-available">Stokta</span>
 					</div>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-
-					<div class="product-options">
-						<label>
-							Size
-							<select class="input-select">
-								<option value="0">X</option>
-							</select>
-						</label>
-						<label>
-							Color
-							<select class="input-select">
-								<option value="0">Red</option>
-							</select>
-						</label>
-					</div>
+					<p>@Model.Description</p>
 
 					<div class="add-to-cart">
 						<div class="qty-label">
 							Qty
 							<div class="input-number">
-								<input type="number">
+								<input type="number" value="1">
 								<span class="qty-up">+</span>
 								<span class="qty-down">-</span>
 							</div>
 						</div>
-						<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> add to cart</button>
+						<button class="add-to-cart-btn"><i class="fa fa-shopping-cart"></i> Sepete Ekle</button>
 					</div>
 
 					<ul class="product-btns">
-						<li><a href="#"><i class="fa fa-heart-o"></i> add to wishlist</a></li>
-						<li><a href="#"><i class="fa fa-exchange"></i> add to compare</a></li>
+						<li><a href="#"><i class="fa fa-heart-o"></i> Beğen</a></li>
 					</ul>
 
 					<ul class="product-links">
-						<li>Category:</li>
-						<li><a href="#">Headphones</a></li>
-						<li><a href="#">Accessories</a></li>
+						<li>Kategoriler:</li>
+						<li><a href="#">@Model.MainCategory.Name</a></li>
+						<li><a href="#">@Model.SubCategory.Name</a></li>
 					</ul>
 
-					<ul class="product-links">
-						<li>Share:</li>
-						<li><a href="#"><i class="fa fa-facebook"></i></a></li>
-						<li><a href="#"><i class="fa fa-twitter"></i></a></li>
-						<li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-						<li><a href="#"><i class="fa fa-envelope"></i></a></li>
-					</ul>
+					
 
 				</div>
 			</div>
@@ -123,7 +104,6 @@
 					<!-- product tab nav -->
 					<ul class="tab-nav">
 						<li class="active"><a data-toggle="tab" href="#tab1">Description</a></li>
-						<li><a data-toggle="tab" href="#tab2">Details</a></li>
 						<li><a data-toggle="tab" href="#tab3">Reviews (3)</a></li>
 					</ul>
 					<!-- /product tab nav -->
@@ -133,20 +113,12 @@
 						<div id="tab1" class="tab-pane fade in active">
 							<div class="row">
 								<div class="col-md-12">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									<p>@Model.Properties</p>
 								</div>
 							</div>
 						</div>
 						<!-- /tab1  -->
-						<!-- tab2  -->
-						<div id="tab2" class="tab-pane fade in">
-							<div class="row">
-								<div class="col-md-12">
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-								</div>
-							</div>
-						</div>
-						<!-- /tab2  -->
+						
 						<!-- tab3  -->
 						<div id="tab3" class="tab-pane fade in">
 							<div class="row">
@@ -341,7 +313,7 @@
 
 			<div class="col-md-12">
 				<div class="section-title text-center">
-					<h3 class="title">Related Products</h3>
+					<h3 class="title">Benzer Ürünler</h3>
 				</div>
 			</div>
 
