--- a/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_NavbarPartial.cshtml
+++ b/RhythmicRealm/RhythmicRealm.UI/Views/Shared/_NavbarPartial.cshtml
@@ -7,11 +7,11 @@
 			<!-- NAV -->
 			<ul class="main-nav nav navbar-nav">
 				<li class="active"><a href="/">Ana Sayfa</a></li>
-				<li><a href="#">Tuşlular</a></li>
-				<li><a href="#">Telliler</a></li>
-				<li><a href="#">Yaylılar</a></li>
-				<li><a href="#">Nefesliler</a></li>
-				<li><a href="#">Davul Perküsyon</a></li>
+				<li><a asp-area="" asp-controller="Store" asp-action="Index" >Tuşlular</a></li>
+				<li><a asp-area="" asp-controller="Store" asp-action="Index" >Yaylılar</a></li>
+				<li><a asp-area="" asp-controller="Store" asp-action="Index" >Telliler</a></li>
+				<li><a asp-area="" asp-controller="Store" asp-action="Index" >Nefesliler</a></li>
+				<li><a asp-area="" asp-controller="Store" asp-action="Index" >Davul Perküsyon</a></li>
 			</ul>
 			<!-- /NAV -->
 		</div>
